fix(storefront): BCTHEME-856 Fixed images placeholder on hero carousel shifted on mobile when slide has content (#2112)

--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -108,8 +108,10 @@
         }
 
         &.is-image-error {
-            background: url("../img/hero-carousel-image-load-error.svg") center center no-repeat;
-            background-size: contain;
+            .heroCarousel-image-wrapper {
+                background: url("../img/hero-carousel-image-load-error.svg") center center no-repeat;
+                background-size: contain;    
+            }
         }
     }
 }
